tests/machine/x/cobol/partial_application.cob
       PERFORM ADD USING 5
       IDENTIFICATION DIVISION.
       PROGRAM-ID. PARTIAL_APPLICATION.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 ADD_RES PIC 9 VALUE 0.
       01 ADD5 PIC 9.
       01 TMP PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE ADD5 = ADD_RES
       PERFORM ADD5 USING 3
       DISPLAY ADD5_RES
       STOP RUN.
       
       ADD.
           PROCEDURE DIVISION USING A B.
               COMPUTE ADD_RES = A + B
               EXIT.
